ecmascript/parser/tests/typescript-errors/tsc/async/es2017/asyncArrowFunction/asyncArrowFunction8_es2017/input.ts.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/async/es2017/asyncArrowFunction/asyncArrowFunction8_es2017/input.ts:5:19
  |
5 |   var v = { [await]: foo }
  |                   ^

